update button style and fix overflowing image

--- a/assets/src/css/styles.scss
+++ b/assets/src/css/styles.scss
@@ -80,6 +80,18 @@ a:active {
 	text-decoration: none;
 }
 
+img {
+	max-width: 800px;
+
+	@media screen and (max-width: 781px) {
+		max-width: 700px;
+	}
+
+	@media only screen and (max-width: 586px) {
+		max-width: 325px;
+	}
+}
+
 .editor-styles-wrapper .wp-site-blocks>*+*,
 .editor-styles-wrapper .wp-site-blocks>*+*+*,
 .wp-site-blocks>*+*,
